test-data/invalid/no-singular.jsx
const Test = () => (
    <PluralTranslate>
        <Plural />
    </PluralTranslate>
);
